[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/UI_THEME.tres" type="Theme" id=1]
[ext_resource path="res://script/pausemenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.411765, 0.411765, 0.411765, 0.458824 )

[sub_resource type="Theme" id=2]

[node name="Pausenode" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_left = 406.0
margin_top = 250.0
margin_right = 618.0
margin_bottom = 350.0
theme = SubResource( 2 )
color = Color( 0.490196, 0.133333, 0.0745098, 0.482353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 412.0
margin_top = 200.0
margin_right = 612.0
margin_bottom = 400.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 77.0
text = "PAUSED"
align = 1
valign = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
margin_top = 81.0
margin_right = 200.0
margin_bottom = 98.0
text = "Resume"

[node name="Restart" type="Button" parent="Panel/VBoxContainer"]
margin_top = 102.0
margin_right = 200.0
margin_bottom = 119.0
text = "Restart"

[node name="BackToStart" type="Button" parent="Panel/VBoxContainer"]
margin_top = 123.0
margin_right = 200.0
margin_bottom = 140.0
text = "Back to Main Menu"
[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackToStart" to="." method="_on_BackToStart_pressed"]
